--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "cleanblog",
   "version": "1.0.0",
-  "description": "",
+  "description": "cleanBlog Project",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js"
   },
-  "keywords": [],
+  "keywords": [
+    "node.js",
+    "express",
+    "mongodb",
+    "mongoose",
+    "ejs"
+  ],
   "author": "Ayse Aleyna Yavuz",
   "license": "ISC",
   "devDependencies": {
@@ -17,6 +22,8 @@
   "dependencies": {
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
+    "method-override": "^3.0.0",
     "mongoose": "^7.2.2"
   }
 }
